add lib react-helmet

--- a/index.html
+++ b/index.html
@@ -4,8 +4,16 @@
     <meta charset="UTF-8" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <meta name="keywords" content="frontend, css, html, tropadigital" />
+    <meta name="author" content="Elvis Felix">
+
+    <meta
+      name="description"
+      content="Page desenvolvida para test Front-end"
+    />
 
     <link href="https://fonts.googleapis.com/css2?family=Advent+Pro:wght@400;600;700&family=Roboto&display=swap" rel="stylesheet" />
     <title>Tropa Digital</title>
